# catClassifier

./: .gitignore  application.py  dnn_app_utils.py  pyproject.toml  test.ipynb
.github/: copilot-instructions.md
pytorch_tests/: model_eval.py
