[project]
name = "00-catdog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.14.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pip>=25.1.1",
    "ruff>=0.11.13",
    "scipy>=1.15.3",
]
